--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-less": "^4.0.1",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
+    "lodash": "^4.17.10",
     "update": "^0.7.4"
   }
 }
